connect reports page to api
